# Octomap

./: .gitignore  .gitmodules  Dockerfile  OCTOMAP.md  Octomap_brainspark.ipynb  README.md  ToDo.MD  adaptive_voxel_grid_points.txt  octree_from_point_cloud.bt  point_cloud.txt  requirements.txt  simple_example.cpp  simple_tree.bt  voxel_grid.ply  voxel_grid_points.txt
octomap_demo/: CMakeLists.txt  read_mapping_bundle.py
octomap_demo/src/: 2d_raycasting.cpp  3d_raycasting.cpp  creating_octomap.cpp  octomap_from_mapping_data_exercise.cpp  pruning.cpp  simple_example.cpp
scripts/: convert_baselink_pointclouds_to_world_frame_pointclouds.py  regular_voxel_grid.py
